--- a/coins.html
+++ b/coins.html
@@ -87,7 +87,7 @@
                                                     <div class="col-4">
                                                         <div class="buy-eos">
                                                             <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
-                                                            <input type="number" id="purchase-amount" class="form-control" placeholder="Amount of ETH to convert (e.g. 0.5)">
+                                                            <input type="number" id="purchase-amount" class="form-control" placeholder="Amount in ETH (e.g. 0.5)">
                                                             <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
                                                         </div>
                                                         <div class="currency-selector">
