Added chat toggle style

--- a/coins.html
+++ b/coins.html
@@ -74,9 +74,9 @@
                         </div>
                         <script type="text/javascript" src="js/poh.js"></script>
 
-                        <div id="token-sale" class="token-bg">
-                                <div style="margin: 0 auto; width: 1200px">
-                                    <div class="container" style="float: left; margin-right: 20px; width: 940px;">
+                        <div id="token-sale" class="token-bg nochat">
+                                <div class="outer-container">
+                                    <div class="container">
                                         <div class="token-content" id="buy-panel">
                                              <div id="token-phase-1" class="token-phase-1">
                                                 <div class="title-bar clearfix visible-xs">
@@ -245,7 +245,7 @@
                                                 <h3>To interact with the network, you must have <a href="https://metamask.io/">Metamask</a> installed and setup.</h3>
                                         </div>
                                     </div>
-                                    <div style="width: 200px; float: right;">
+                                    <div class="chat-box">
                                         <iframe src="https://titanembeds.com/embed/408119545379815434?defaultchannel=408119545379815438" height="700" width="400" frameborder="0"></iframe>
                                     </div>
                                 </div>
