Added chat toggle button

--- a/coins.html
+++ b/coins.html
@@ -171,13 +171,13 @@
                                                                         <div class="poh-value count"></div>
                                                                         <div class="usd-value usdprice"></div>
                                                                     </div>
-
-                                                                                                                                    <div class="traffic-message">
-                                                                    <i class="alert-icon"></i>Depending on the Ethereum network traffic, figures may be delayed.
-                                                                </div>
+                                                                    <div class="traffic-message">
+                                                                        <i class="alert-icon"></i>Depending on the Ethereum network traffic, figures may be delayed.
+                                                                    </div>
                                                                     <div class="ContractBalance">
-                                                                            <span class="period float-right">Contract Balance  <span class="current-distribution-period">0.00</span> ETH</span>
-                                                                        </div>
+                                                                        <span class="period float-left"><a href="#" id="chat-toggle">Show Chat</a></span>
+                                                                        <span class="period float-right">Contract Balance  <span class="current-distribution-period">0.00</span> ETH</span>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
