Added chat toggle button

--- a/coins.html
+++ b/coins.html
@@ -175,7 +175,7 @@
                                                                         <i class="alert-icon"></i>Depending on the Ethereum network traffic, figures may be delayed.
                                                                     </div>
                                                                     <div class="ContractBalance">
-                                                                        <span class="period float-left"><a href="#" id="chat-toggle">Show Chat</a></span>
+                                                                        <span class="period float-left"><a href="#" id="chat-toggle">Toggle Chat</a></span>
                                                                         <span class="period float-right">Contract Balance  <span class="current-distribution-period">0.00</span> ETH</span>
                                                                     </div>
                                                                 </div>
