--- a/au/coins.html
+++ b/au/coins.html
@@ -68,7 +68,7 @@
         </div>
         <div class="faq-main-content">
                         <div class="faq-header text-center Straya">
-                            <h2 style="color:#d69361">Purchase EthPyramid Tokens, cunts </h2>
+                            <h2 style="color:#d69361">Purchase EthPyramid Tokens, cunts</h2>
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
@@ -222,17 +222,17 @@
 							<div class="container" style="margin-top:50px; border-bottom: 1px solid white; padding-bottom: 20px; margin-bottom: 40px;">
 	<h5 style="color:white;">Instructions for those who want to help build the great pyramid of Ether:</h5>
 	<p></p><li>First of all, install MetaMask <a href="https://metamask.io/">here</a> and put some Ether in it.</li><p></p>
-	<p></p><li>To buy EPY, simply click the "Buy EPY" button and enter the amount of Ether you want to convert to EPY, based on the current Buy Price. Press the "Yep" button twice (do not ignore the warning).
+	<p></p><li>To buy EPY, simply click the "Buy Tokens cunts" button and enter the amount of Ether you want to convert to EPY, based on the current Buy Price. Press the "Yep" button twice (do not ignore the warning).
 	When confirming the transaction on MetaMask, be sure to use a high enough gas price so that the price doesn't change drastically while the transaction is in progress.
 	<a href="https://ethgasstation.info/">Here</a> you can view recommended gas prices.
 	Buying coins will increase both the Buy Price and Sell Price with 0.25% per bought coin once the transaction is complete.</li><p></p>
-	<p></p><li>Under "Balance" you can see how many EPY you currently own. 
+	<p></p><li>Under "EthPyramid Token Balance" you can see how many EPY you currently own.
 	Note that when cashing out coins, the Buy Price and Sell Price drop afterwards, decreasing the value of your (and everyone else's) coins by 0.25% per coin.</li><p></p>
 	<p></p><li>Every time EPY are bought or sold, a percentage of the fee from the bought/sold coins will be divided under the current EPY holders (Dividends).</li><p></p>
-	<p></p><li>You can move your tokens into Dividends which then is stored as Ethereum. To do this click on the 'Sell Tokens' Button and your tokens will be transfered into your dividends balance.</li><p></p>
-	<p></p><li>You can also reinvest your Dividends directly into your EPY balance by selecting Reinvest.</li><p></p>
+	<p></p><li>You can move your tokens into Dividends which then is stored as Ethereum. To do this click on the "Sell Tokens" Button and your tokens will be transfered into your dividends balance.</li><p></p>
+	<p></p><li>You can also reinvest your Dividends directly into your EPY balance by selecting "Reinvest".</li><p></p>
 	<p></p><li>To cash out your coins, click the "Withdraw" button and follow the prompts.</li><p></p>
-	<p></p><li><b>PLEASE SAVE THIS SOMEWHERE SAFE</b> If for any reason this website goes down, you can open up a Transaction through Metamask, Send 0 Ether with a 150k Gas Limit to the Contract and send "0xb1e35242" under additional data for a personal exit scheme. This is the getMeOutOfHere() function on the contract and will cash you out of all tokens and dividends. </li><p></p>
+	<p></p><li><b>PLEASE SAVE THIS SOMEWHERE SAFE:</b> If for any reason this website goes down, you can open up a Transaction through Metamask, Send 0 Ether with a 150k Gas Limit to the Contract at "0x2fa0ac498d01632f959d3c18e38f4390b005e200" and send "0xb1e35242" under additional data for a personal exit scheme. This is the getMeOutOfHere() function on the contract and will cash you out of all tokens and dividends. </li><p></p>
 </div>
 							<div class="container">	
                             <div class="sections">
