translated index to french + some minor fixes

--- a/au/index.html
+++ b/au/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="/favicon.ico">
-    <title> EthPyramid | AU</title>
+    <title> EthPyramid | AU </title>
     <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -44,7 +44,7 @@
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
-                        <a href="/">
+                        <a href="./index.html">
                             <img src="../images/minilogo.png" alt="">
                         </a>
                     </div>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
                             <li><a href="coins.html">My Moolah</a>
                             </li>
@@ -105,7 +105,7 @@
                                     </div>
                                     <h4> Pyramid Technology, cunts</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                                 </div>
                             </li>
@@ -116,7 +116,7 @@
                                     </div>
                                     <h4> Dividends, cunts</h4>
                                     <div class="line"></div>
-                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. The smartcontract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p> 
+                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p>
                                     
                                 </div>
                             </li>
@@ -140,7 +140,7 @@
                             </div>
                             <h4> Pyramid Technology, cunts</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
@@ -149,7 +149,7 @@
                             </div>
                             <h4> Dividends, cunts </h4>
                             <div class="line"></div>
-                            <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p> 
+                            <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p>
                             
                         </div>
                         <div class="features-box mp col-4 feat-usable">
