--- a/fr/index.html
+++ b/fr/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="title" content="EthPyramid">
-    <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
+    <meta name="description" content="Un système pyramidal sécurisé et autonome.">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
-    <title> EthPyramid </title>
-    <link rel="stylesheet" href="css/jquery.modal.min.css">
+    <link rel="shortcut icon" href="../favicon.ico">
+    <title> EthPyramid | FR </title>
+    <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="../js/jquery.min.js" type="text/javascript"></script>
     <script src="../js/jquery.countdown.js" type="text/javascript"></script>
     <script src="../js/moment.min.js" type="text/javascript"></script>
     <!--custom stylesheet -->
-    <link rel="stylesheet" href="css/main.css?1512455877">
-    <link rel="stylesheet" href="css/main_ie.css?1512456911">
+    <link rel="stylesheet" href="../css/main.css?1512455877">
+    <link rel="stylesheet" href="../css/main_ie.css?1512456911">
     <script src="../js/jquery.bxslider.min.js"></script>
     <link rel="icon"
     type="image/png"
@@ -44,7 +44,7 @@
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
-                        <a href="/">
+                        <a href="./index.html">
                             <img src="images/minilogo.png" alt="">
                         </a>
                     </div>
@@ -54,14 +54,14 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
-                            <li><a href="coins.html">My Coins</a>
+                            <li><a href="coins.html">Mes jetons</a>
                             </li>
 							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
                             </li>
                             <li>
-                              <a href="whitepaper.html" target="_blank">Whitepaper</a>
+                              <a href="whitepaper.html" target="_blank">Livre blanc</a>
                             </li>
                         </ul>
                     </div>
@@ -75,14 +75,14 @@
                     <img src="images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
-                  A self-sustaining, <b>secure</b> pyramid scheme.
+                  Un système pyramidal <b>sécurisé</b> et <b>autonome</b>.
                 </div>
                 <div class="cta-group">
-                    <a href="coins.html" class="cta" style="background: #d69361;">Buy In</a>
+                    <a href="coins.html" class="cta" style="background: #d69361;">Acheter</a>
                     <a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" class="cta" target="_blank">Smart Contract</a>
                 </div>
                 <div class="banner-title hidden-xs">
-                    <h2>Strong Hands Only</h2>
+                    <h2>Mains Fortes Seulement</h2>
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
     <div class="ep-features-main">
         <div class="container">
             <div class="features-description visible-xs">
-                <h2>The Most Powerful &amp; Decentralized Pyramid Yet</h2>
+                <h2>La pyramide la plus puissante &amp; décentralisée</h2>
             </div>
             <div class="features-box-main">
                 <div class="flex-parent clearfix">
@@ -102,10 +102,10 @@
                                     <div class="icon-main">
                                         <i class="fas fa-chart-line"></i>
                                     </div>
-                                    <h4> Pyramid Technology</h4>
+                                    <h4>Technologie pyramidale</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
-                                    </p>
+                                    <p>Lorsqu'une personne achète ou vend un jeton EthPyramid (EPY), 10% du prix d'achat ou de vente sont divisés end dividendes payé en ETH entre chaque investisseur en fonction du nombre de jetons qu'ils possèdent.
+                                       Ces jetons EPY sont sauveguardés a un prix verrouillé que personne ne peut toucher mais vous!</p>
                                 </div>
                             </li>
                             <li>
@@ -113,9 +113,9 @@
                                     <div class="icon-main">
                                         <i class="fas fa-exchange-alt"></i>
                                     </div>
-                                    <h4> Dividends </h4>
+                                    <h4>Dividendes</h4>
                                     <div class="line"></div>
-                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. The smartcontract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p>
+                                    <p>10% ETH de chaque <strong>achat et vente</strong> seront récompensés aux détenteurs de jetons. <b>LES MAINS FORTES</b> seront récompensées à chaque crash et pompe. Notre smart contract, contrairement à d'autres systèmes, vous permettra de réinvestir directement vos dividendes en jetons, augmentant ainsi vos dividendes dans le future.</p>
 
                                 </div>
                             </li>
@@ -124,10 +124,9 @@
                                         <div class="icon-main">
                                                 <i class="fas fa-sync-alt"></i>
                                             </div>
-                                            <h4> Forever </h4>
+                                            <h4>Pour toujours</h4>
                                             <div class="line"></div>
-                                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
-                                            </p>
+                                            <p>Sérieusement, pas de pré-mine, pas d'auto-destruction, pas d'arnaque de sortie. Ce contrat fluctuera en prix et versera des dividendes jusqu'à la mort du réseau ethereum. À tout moment, vous pouvez revendre vos jetons au Smart Contract pour 90% du prix actuel, ou retirer/réinvestir les dividendes que vous avez accumulés!</p>
                                 </div>
                             </li>
                         </ul>
@@ -137,28 +136,27 @@
                             <div class="icon-main">
                                 <i class="fas fa-chart-line"></i>
                             </div>
-                            <h4> Pyramid Technology</h4>
+                            <h4>Technologie pyramidale</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
-                                    </p>
+                                    <p>Lorsqu'une personne achète ou vend un jeton EthPyramid (EPY), 10% du prix d'achat ou de vente sont divisés end dividendes payé en ETH entre chaque investisseur en fonction du nombre de jetons qu'ils possèdent.
+                                       Ces jetons EPY sont sauveguardés a un prix verrouillé que personne ne peut toucher mais vous!</p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
                             <div class="icon-main">
                                 <i class="fas fa-exchange-alt"></i>
                             </div>
-                            <h4> Dividends </h4>
+                            <h4>Dividendes</h4>
                             <div class="line"></div>
-                            <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p>
+                            <p>10% ETH de chaque <strong>achat et vente</strong> seront récompensés aux détenteurs de jetons. <b>LES MAINS FORTES</b> seront récompensées à chaque crash et pompe. Notre smart contract, contrairement à d'autres systèmes, vous permettra de réinvestir directement vos dividendes en jetons, augmentant ainsi vos dividendes dans le future.</p>
 
                         </div>
                         <div class="features-box mp col-4 feat-usable">
                             <div class="icon-main">
                                 <i class="fas fa-sync-alt"></i>
                             </div>
-                            <h4> Forever </h4>
+                            <h4>Pour toujours</h4>
                             <div class="line"></div>
-                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
-                            </p>
+                            <p>Sérieusement, pas de pré-mine, pas d'auto-destruction, pas d'arnaque de sortie. Ce contrat fluctuera en prix et versera des dividendes jusqu'à la mort du réseau ethereum. À tout moment, vous pouvez revendre vos jetons au Smart Contract pour 90% du prix actuel, ou retirer/réinvestir les dividendes que vous avez accumulés!</p>
                         </div>
                     </div>
 
@@ -175,32 +173,32 @@
                     <div class="faq-main">
                             <div class="faq-main-content" style="padding-top: 0px;">
                                 <div class="container">
-                                    <div class="sections">
-                                <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
+                            <div class="sections">
+                                <h4 id="1">Q: Est-ce réel?</h4>
+                                <p>R: Oui, les jetons EthPyramid (EPY) sont construits depuis la blockchain éthereum. Ils n'ont aucune valeur en dehors de s'engager dans le jeu EP avec notre robot et vous ne devriez pas considérer ceci comme un investissement.</p>
                              </div>
                              <div class="sections">
-                                <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
-                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in Ethpyramid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
+                                <h4 id="2">Q: Est-ce que ce code a été copié collé à partir du code POWH?</h4>
+                                <p>R: Le code d'EthPyramid a été créé à partir de zéro, toutes les failles trouvées précédemment dans les systèmes de ponzi défectueux ne sont pas présentes dans EthPryamid. L'équipe de développement d'EthPyramid n'a jamais été liée à POWHcoin.</p>
                              </div>
                              <div class="sections">
-                                <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell.
+                                <h4 id="3">Q: N'y avait-il pas quelque chose de semblable à EthPyramid plus tôt?</h4>
+                                <p>R: Oui, il existe plusieurs variantes de ponzis, de pyramides et d'autres montages financier; EthPyramid est la prochaine étape avec des dividendes réinvestissables et une redistribution de 10% sur la vente.
 
                                 </p>                                    </div>
                              <div class="sections">
-                                 <h4 id="4">Q: Is EthPyramid secure?</h4>
-                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
+                                 <h4 id="4">Q: Est-ce que EthPyramid est sécurisé?</h4>
+                                 <p>Oui. Notre équipe de développement consacre beaucoup d'heures a coder et tester pour s'assurer que vos jetons sont sécurisés. Les fonctions internes du contrat ne sont pas accessibles à l'utilisateur final.<p>
                               </div>
                              <div class="sections">
-                                <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
-                                <p>A: You need to install <a href="https://metamask.io/">Metamask</a> and also need to buy some Ether (ETH), probably from something like Coinbase.</p>
+                                <h4 id="5">Q: Qu'est-ce que j'ai besoin de faire pour acheter dans cette Pyramide?</h4>
+                                <p>R: Vous devez installer <a href="https://metamask.io/">Metamask</a> et également acheter de l'éther (ETH), par example depuis Coinbase.</p>
                              </div>
                              <div class="sections">
-                                <h4 id="6">Q: Is this coin pre-mined?</h4>
-                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
+                                <h4 id="6">Q: Ces jetons sont-ils pré-minée?</h4>
+                                <p>R: Non, il n'y a pas non plus de moyen dans le code qui nous permettent de retirer l'ETH du contrat d'une manière que vous n'êtes pas capable de faire.</p>
                              </div>
-                                </div>
+							 </div>
                             </div>
                         </div>
               </div>
