--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
                             <li><a href="coins.html">My Coins</a>
                             </li>
@@ -104,7 +104,7 @@
                                     </div>
                                     <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                                 </div>
                             </li>
@@ -115,7 +115,7 @@
                                     </div>
                                     <h4> Dividends </h4>
                                     <div class="line"></div>
-                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. The smartcontract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p> 
+                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p>
                                     
                                 </div>
                             </li>
@@ -139,7 +139,7 @@
                             </div>
                             <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
