--- a/au/coins.html
+++ b/au/coins.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../favicon.ico">
-    <title> EthPyramid | Buy / Sell Coins</title>
+    <title> EthPyramid | AU | Buy/Sell Coins </title>
     <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <!--custom stylesheet -->
     <link rel="stylesheet" href="../css/main.css?1507783168">
@@ -42,7 +42,7 @@
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
-                        <a href="/">
+                        <a href="./index.html">
                             <img src="../images/minilogo.png" alt="">
                         </a>
                     </div>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
                             <li><a href="coins.html">My Moolah</a>
                             </li>
