--- a/fr/coins.html
+++ b/fr/coins.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Un système pyramidal sécurisé et autonome.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../favicon.ico">
-    <title> EthPyramid | Buy / Sell Coins</title>
+    <title> EthPyramid | FR | Acheter/Vendre Jetons </title>
     <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <!--custom stylesheet -->
     <link rel="stylesheet" href="../css/main.css?1507783168">
@@ -42,7 +42,7 @@
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
-                        <a href="/">
+                        <a href="./index.html">
                             <img src="../images/minilogo.png" alt="">
                         </a>
                     </div>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
                             <li><a href="coins.html">Mes Jetons</a>
 							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
@@ -261,7 +261,7 @@
                               </div>
                              <div class="sections">
                                 <h4 id="5">Q: Qu'est-ce que j'ai besoin de faire pour acheter dans cette Pyramide?</h4>
-                                <p>R: Vous devez installer <a href="https://metamask.io/">Metamask</a> et également acheter de l'éther (ETH), par example depuis Coinbase</p>
+                                <p>R: Vous devez installer <a href="https://metamask.io/">Metamask</a> et également acheter de l'éther (ETH), par example depuis Coinbase.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="6">Q: Ces jetons sont-ils pré-minée?</h4>
