fixed index href for AU and FR

--- a/fr/index.html
+++ b/fr/index.html
@@ -44,7 +44,7 @@
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
-                        <a href="./index.html">
+                        <a href="index.html">
                             <img src="images/minilogo.png" alt="">
                         </a>
                     </div>
